assets/styles/main.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
  display: block;
}
body {
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* CUSTOM RESETS **************************************************************/
* {
  box-sizing: border-box;
}

a,
body {
  color: #333;
}

/* COLORS *********************************************************************/
:root {
  --gray: #272822;
  --green: #A6E22E;
  --pink: #F92672;
  --orange: #FD971F;
  --blue: #66D9EF;
}

/* BASICS *********************************************************************/
body {
  font-family: 'Open Sans', sans-serif;
  background: var(--gray);
}

a {
  text-decoration: none;
}

.container {
  max-width: 800px;
  padding: 0 20px;
  margin: 0 auto;
}

/* NAV ************************************************************************/
.nav-container {
  justify-content: center;
  background: var(--gray);
  border-bottom: 1px solid #222;
  margin-bottom: 20px;
  padding: 5px 0;
}

.nav {
  height: 30px;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav-logo {
  color: white;
  font-weight: 700;
  display: flex;
  align-items: center;
}

.nav-logo span {
  color: #555;
  font-size: 12px;
  font-weight: 400;
  margin-left: 10px;
}

.nav-links {
  display: flex;
  font-size: 12px;
}

.nav-link {
  padding: 10px 0;
  display: block;
  margin-left: 10px;
  color: white;
}

.nav-search {
  background: linear-gradient(#badc58, #6ab04c);
  padding: 10px 15px;
  border-radius: 5px;
  font-size: 12px;
  font-weight: 700;
  color: white;
}

/* JOBS ***********************************************************************/
.jobs > p {
  color: white;
  font-size: 12px;
  margin-bottom: 20px;
}

.job-card {
  background: white;
  margin-bottom: 10px;
  border-radius: 5px;
  display: flex;
  transition: 0.25s box-shadow, 0.25s margin;
  overflow: hidden;
  box-shadow: 0 0 2px 2px var(--gray);
}

.job-card:hover {
  box-shadow: 0 0 0 2px var(--green);
  margin-left: -10px;
  margin-right: -10px;
}

.job-points {
  display: flex;
  min-width: 50px;
  width: 50px;
  justify-content: center;
  align-items: center;
  font-size: 11px;
  padding: 2px;
  color: var(--gray);
  font-weight: 700;
}

.job-points-passing {
  background: var(--green);
}

.job-points-failing {
  background: #ff7979;
  box-shadow: inset 0 0 10px #eb4d4b;
}


.job-main {
  flex-grow: 1;
}

.job-link {
  padding: 10px;
  color: var(--gray);
  display: block;
}

.job-top {
  display: flex;
  justify-content: space-between;
}

.job-company {
  color: #777;
  font-size: 14px;
}

.job-position {
  font-weight: 700;
  margin-bottom: 5px;
}

.job-location {
  font-size: 12px;
  align-self: flex-start;
}

.job-body {
  margin-top: 10px;
}

/* KEYWORDS *******************************************************************/
.keyword-matches {
  display: flex;
  justify-content: space-between;
}

.good-keywords,
.bad-keywords {
  display: flex;
}

.keyword {
  padding: 5px;
  font-size: 10px;
  border-radius: 5px;
  font-weight: 700;
}

.good-keyword {
  background: var(--green);
  margin-right: 5px;
  font-weight: 400;
}

.bad-keyword {
  background: orangere;
  margin-left: 5px;
  font-weight: 400;
}

/* SEARCH *********************************************************************/
.search-jumbo {
  color: white;
  justify-content: space-between;
  margin-bottom: 20px;
  padding: 100px 0;
  text-align: center;
  background: url('/jumboBackground.jpg');
  background-size: cover;
  background-position: center;
  margin-top: -20px;
}

.search-jumbo-title {
  font-weight: 700;
  font-size: 24px;
  margin-bottom: 10px;
  color: var(--green);
  line-height: 1.5;
}

.search-jumbo-detail {
  color: white;
  margin-bottom: 20px;
}

.passing-points-container {
  background: white;
  margin-bottom: 20px;
  padding: 20px;
  border-radius: 5px;
  box-shadow: 0 2px 1px #ccc;
  text-align: center;
}

.passing-points-label {
  font-size: 14px;
  display: block;
  margin-bottom: 10px;
}

.points-to-pass {
  background: var(--green);
  color: white;
  border-radius: 5px;
  display: inline-block;
  padding: 5px;
  font-weight: 700;
}

.fields {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

fieldset {
  width: 32%;
  background: white;
  margin-bottom: 20px;
  border-radius: 5px;
  overflow: hidden;
}

input[type='submit'] {
  display: block;
  width: 100%;
  padding: 10px;
  background: var(--green);
  border: none;
  font-weight: 700;
  color: var(--gray);
  line-height: 1.5;
  transition: 0.5s background;
  cursor: pointer;
  border-radius: 5px;
  margin-bottom: 20px;
}

input[type='submit']:disabled {
  background: #ccc !important;
  cursor: default;
  box-shadow: 0 2px 2px #aaa;
  color: var(--gray)222;
}

input[type='range'] {
  display: none;
}

.slider {
  background-color: white;
  border-radius: 10px;
  height: 50px;
  overflow: hidden;
  width: 100%;
  position: relative;
  margin-bottom: 20px;
  cursor: ew-resize;
}

.slider-fill {
  background: var(--green);
  height: 100%;
  width: 50%;
  position: relative;
}

.slider-label-container {
  position: absolute;
  height: 100%;
  display: flex;
  top: 0;
  left: 20px;
  align-items: center;
  pointer-events: none;
  z-index: 200;
  font-size: 14px;
}

.slider-label-container i {
  color: limegreen;
  margin-right: 5px;
}

.slider-label-detail {
  color: var(--gray);
  font-weight: 700;
  user-select: none;
}

.search-label-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
}

.label-good {
  color: limegreen;
}

.label-bad {
  color: darkred;
}

.search-label {
  display: block;
  font-size: 14px;
  font-weight: 700;
  color: var(--gray);
}

.label-explanation {
  padding: 10px;
  background: #222;
  color: white;
  font-size: 12px;
  line-height: 1.5;
}

.label-good {
  background: var(--green);
}

.label-bad {
  background: var(--pink);
}

textarea {
  border: none;
  width: 100%;
  height: 400px;
  resize: none;
  color: var(--gray);
  padding: 20px;
  line-height: 1.5;
}

textarea:focus {
  outline: none;
}

.search-locations {
  margin-bottom: 10px;
}

.search-location {
  display: inline-flex;
  border-radius: 5px;
  margin-bottom: 5px;
  font-size: 10px;
  align-items: center;
  background: white;
  transition: opacity 0.25s;
}

.search-location:hover {
  opacity: 50%;
}

.search-location.hidden {
  display: none;
}

.search-location input {
  display: none;
}

.search-location label {
  cursor: pointer;
  padding: 10px;
}

.search-location.selected {
  background: var(--green);
  color: var(--gray);
}

.search-location.selected:hover {
  opacity: 100%;
}

.form-section-header {
  margin-bottom: 10px;
  display: flex;
  align-items: center;
  font-size: 14px;
}

.form-section-header span {
  background: white;
  color: var(--gray);
  display: inline-block;
  margin-right: 10px;
  border-radius: 3px;
  padding: 5px 10px;
}

.form-section-header h4 {
  color: white;
}

#toggleLocations {
  border: none;
  outline: none;
  text-decoration: underline;
  background: none;
  cursor: pointer;
  float: right;
  color: #aaa;
}

@media screen and (max-width: 600px) {
  /* SEARCH *******************************************************************/
  .fields {
    display: block;
  }

  fieldset {
    width: 100%;
  }

  textarea {
    height: 200px;
  }

  /* JOB MEDIA QUERIES ********************************************************/
  .job-position {
    font-size: 13px;
    margin-bottom: 3px;
  }

  .job-company {
    font-size: 12px;
  }

  .keyword-matches {
    flex-direction: column;
  }

  .bad-keyword {
    margin-top: 3px;
    margin-right: 2px;
    margin-left: 0px;
  }

  .good-keyword {
    margin-right: 2px;
  }

  .job-card {
    position: relative;
    display: block;
  }

  .job-location {
    position: absolute;
    right: 6px;
    top: 6px;
  }

  .keyword {
    padding: 3px;
  }

  .job-points-passing {
    padding: 3px;
  }

  /* NAV MEDIA QUERIES ********************************************************/
  .nav-logo {
    flex-direction: column;
    align-items: flex-start;
  }

  .nav-logo span {
    margin-left: 0px;
  }
}

